tirado classe desnecessaria

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class="letter p-top">Vamos ver as luzinhas?</h1>
     <figure class="center"><img  src="gif/giphy.gif" alt="gatinho natal"></figure>
     
-    <div class="center-div letter-btn">
+    <div class="center-div">
         <a href="yep.html"><button class="btn letter-btn">Yep</button></a> 
         <a href="nop.html"><button class="btn letter-btn">Nop</button></a>
     </div>
